add vscode configuration

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,6 +12,7 @@
             "args": [
                 "-v"
             ],
+            "preLaunchTask": "${defaultBuildTask}",
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
